fix(uiGridHeader): Fix height calculations
Header heights were wrong in the "row header", as well as kinda weird when
multiple filters were on one column and another only had one: the border
on the second one would be too short.

This change adds handling for updating the headers' heights to keep them
consistent. Any header cell shorter than the largest header gets explicitly set to the
right height.

Alternatively every header cell will get set to the "inner" height of its
header so a shorter header cell will still have the right border size as a
larger one.

Fixes #1639, fixes #1613

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -4,11 +4,14 @@
 }
 
 @topPanelRadius: @gridBorderRadius - @gridBorderWidth;
+
+.ui-grid-header {
+  border-bottom: 1px solid @borderColor;
+}
+
 .ui-grid-top-panel {
     position: relative;
-    // z-index: 1;
-    // background-color: @darkGray; // #EAEAEA
-    border-bottom: 1px solid @borderColor; // #D4D4D4
+    // border-bottom: 1px solid @borderColor; // #D4D4D4
 
     overflow: hidden;  // Disable so menus show up
     font-weight: bold;
